--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   bloc: ^8.1.2
   rive: ^0.12.4
   lottie: ^2.7.0
+  google_fonts: ^6.1.0
+  go_router: ^13.0.0
 
 dev_dependencies:
   flutter_test:
@@ -33,6 +35,7 @@ flutter:
   assets:
     - assets/rive/
     - assets/lottie/
+    - assets/background_image/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
