--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,6 @@ dependencies:
 
 
   cupertino_icons: ^1.0.2
-  geolocator: ^10.1.0
   http: ^1.1.2
   flutter_bloc: ^8.1.3
   bloc: ^8.1.2
@@ -21,6 +20,7 @@ dependencies:
   lottie: ^2.7.0
   google_fonts: ^6.1.0
   go_router: ^13.0.0
+  location: ^5.0.3
 
 dev_dependencies:
   flutter_test:
